--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-
-spring.datasource.url=jdbc:postgresql://localhost:5432/uniquest
-spring.datasource.username=postgres
-spring.datasource.password=258963147
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.datasource.driver-class-name=org.postgresql.Driver
-# Permite o acesso sem autenticação (se necessário)
-spring.security.csrf.enabled=false
-
+spring.application.name=UniQuest
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
