--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,3 +15,9 @@ spring.mail.properties.mail.debug=true
 
 
 api.security.token.secret=my-secret-key
+
+
+spring.ai.openai.api-key=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
+spring.ai.openai.base-url=https://api.groq.com/openai/v1
+spring.ai.openai.chat.options.model=llama3-70b-8192
+spring.ai.openai.chat.options.temperature=0.7
