--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,6 +18,6 @@ api.security.token.secret=my-secret-key
 
 
 spring.ai.openai.api-key=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
-spring.ai.openai.base-url=https://api.groq.com/openai/v1
-spring.ai.openai.chat.options.model=llama3-70b-8192
+spring.ai.openai.base-url=https://api.groq.com/openai
+spring.ai.openai.chat.options.model=deepseek-r1-distill-llama-70b
 spring.ai.openai.chat.options.temperature=0.7
