--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -84,6 +84,11 @@
 			<artifactId>spring-ai-openai-spring-boot-starter</artifactId>
 			<version>1.0.0-M5</version>
 		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.18.2</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
