--- a/front/package.json
+++ b/front/package.json
@@ -7,12 +7,18 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@react-pdf/renderer": "^4.1.6",
+    "@shadcn/ui": "^0.0.4",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "framer-motion": "^12.3.1",
+    "lucide-react": "^0.474.0",
     "package-lock.json": "^1.0.0",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-pdf": "^7.7.3",
     "react-scripts": "^5.0.1",
     "web-vitals": "^4.2.4"
   },
