--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,20 @@ services:
     networks: 
       - uninet
   
+  frontend:
+    container_name: frontend
+    build:
+      context: ./front
+    ports:
+      - "3000:3000"
+    networks: 
+      - uninet
+    environment:
+      - REACT_APP_API_URL=http://backend:8080
+    depends_on:
+      - backend
+
+  
   psql:
     container_name: psql
     image: postgres:alpine3.19
