--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
       - 5432:5432
     volumes:
       - ./docker/postgres-data:/var/lib/postgresql/data
+      #./docker/initdb:/docker-entrypoint-initdb.d
     environment:
       POSTGRES_USER: admin
       POSTGRES_DB: uniquestdb
