--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -34,7 +34,7 @@ spring.mail.properties.mail.debug=true
 api.security.token.secret=my-secret-key
 
 
-spring.ai.openai.api-key=<CHAVE-DA-API>
+spring.ai.openai.api-key=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
 spring.ai.openai.base-url=https://api.groq.com/openai
 spring.ai.openai.chat.options.model=llama-3.2-90b-vision-preview
 spring.ai.openai.chat.options.temperature=0.7
